--- a/public/manifest.json
+++ b/public/manifest.json
@@ -19,7 +19,7 @@
     }
   ],
   "start_url": ".",
-  "display": "standalone",
+  "display": "fullscreen",
   "theme_color": "#ffe5e5",
   "background_color": "#0000ff"
 }
