--- a/public/manifest.json
+++ b/public/manifest.json
@@ -26,7 +26,6 @@
     }
   ],
   "start_url": ".",
-  "display": "fullscreen",
-  "theme_color": "#e5e5e5",
-  "background_color": "#0000ff"
+  "display": "fullscreen"
+
 }
