--- a/public/manifest.json
+++ b/public/manifest.json
@@ -26,7 +26,7 @@
     }
   ],
   "start_url": ".",
-  "display": "fullscreen",
+  "display": "standalone",
   "theme_color": "#d9d31e",
   "background_color": "#1ed9d6"
 }
