--- a/public/manifest.json
+++ b/public/manifest.json
@@ -27,6 +27,6 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "transparent",
+  "theme_color": "#d9d31e",
   "background_color": "#1ed9d6"
 }
